--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>purevue</title>
+    <link rel="shortcut icon" type="image/png" href="/public/favicon.ico"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" rel="stylesheet">
   </head>
   <body>
